--- a/systems/sensors/BUILD.bazel
+++ b/systems/sensors/BUILD.bazel
@@ -458,6 +458,16 @@ drake_cc_googletest(
     # Mitigates driver-related issues when running under `bazel test`. For more
     # information, see #7004.
     local = 1,
+    tags = ["manual"],
+    deps = [
+        ":rgbd_renderer",
+        "//drake/common:find_resource",
+        "//drake/common/test_utilities:eigen_matrix_compare",
+        "//drake/math:geometric_transform",
+        ":rgbd_renderer_test"
+    ],
+)
+
     # Disable under LeakSanitizer and Valgrind Memcheck due to driver-related
     # leaks. For more information, see #7520.
     tags = [
