--- a/systems/sensors/godot_renderer/BUILD.bazel
+++ b/systems/sensors/godot_renderer/BUILD.bazel
@@ -1,21 +1,25 @@
-load(
-    "//tools:drake.bzl",
-    "drake_cc_binary",
-    "drake_cc_googletest",
-    "drake_cc_library",
-)
+# -*- python -*-
 
+load(
+    "@drake//tools/skylark:drake_cc.bzl",
+    "drake_cc_binary",
+    "drake_cc_library",
+    "drake_cc_googletest",
+)
 load("//tools/lint:lint.bzl", "add_lint_tests")
+
+package(default_visibility = ["//visibility:public"])
 
 drake_cc_library(
     name = "godot_renderer",
     hdrs = glob(["*.h", "*.inl"]),
     srcs = glob(["*.cc"]),
-    linkopts = ["-lglfw", "-ldl", "-lpng", "-lz"],
-    deps = ["@godot//:godot",
-        "@eigen",
-    ],
-    copts = [],
+    #linkopts = ["-lglfw", "-ldl", "-lpng", "-lz"],
+    linkopts = ["-lglfw"],
+    deps = select({
+        "//conditions:default": ["@godotengine", "@eigen"],
+        "//tools/cc_toolchain:apple": [],
+    }),
     visibility=["//visibility:public"],
 )
 
