Adding gltf parsing

--- a/tools/workspace/godotengine/package.BUILD.bazel
+++ b/tools/workspace/godotengine/package.BUILD.bazel
@@ -115,6 +115,8 @@ cc_library(
         "drivers/unix/dir_access_unix.cpp",
         "drivers/unix/file_access_unix.cpp",
         "editor/**/*.h",
+        "editor/import/editor_scene_importer_gltf.cpp",
+        "editor/import/resource_importer_scene.cpp",
         "platform/**/*.h",
         "platform/**/globals/global_defaults.cpp",
     ]),
