register jpg loader, stuff unused-but-need-to-be-linked functions in godot_renderer instead of godot itself.

--- a/tools/workspace/godotengine/package.BUILD.bazel
+++ b/tools/workspace/godotengine/package.BUILD.bazel
@@ -100,6 +100,8 @@ _PACKAGES = [
     "thirdparty/minizip/**",
     "thirdparty/misc/**",
     "thirdparty/zstd/**",
+    "thirdparty/jpeg-compressor/**",
+    "modules/jpg/**",
 ]
 
 # Compile a library with everything from Godot that we need.
@@ -152,6 +154,7 @@ cc_library(
         "drivers",
         "drivers/gles3",
         "platform/x11",
+        "thirdparty/jpeg-compressor",
         "thirdparty/glad",
         #"thirdparty/freetype/include",
         "thirdparty/zstd",
